# SteinerDijkstra

./: CMakeLists.txt  README.md
Einführungsaufgabe/: CMakeLists.txt
Einführungsaufgabe/include/: steinergraph.h
Einführungsaufgabe/src/: steinergraph.cpp  steinergraph_mst.cpp  testgraph.cpp
examples/: STP-Example.txt
examples/MC/: mc11.stp
include/: dijkstra_steiner.h  steinergraph.h
main/: testgraph.cpp
src/: CMakeLists.txt  Testgraph  dijkstra_steiner.cpp  dijkstra_steiner_bound.cpp  dijkstra_steiner_bound_j_terminal.cpp  dijkstra_steiner_bound_one_tree.cpp  dijkstra_steiner_bound_tsp.cpp  dijkstra_steiner_container_helpers.cpp  dijkstra_steiner_distances.cpp  dijkstra_steiner_helpers.cpp  dijkstra_steiner_topologies.cpp  steinergraph.cpp  steinergraph_all_shortest_paths.cpp  steinergraph_bound.cpp  steinergraph_dijkstra_steiner.cpp  steinergraph_dijkstra_steiner_types.cpp  steinergraph_dijkstras_steiner.cpp  steinergraph_lambdas.cpp  steinergraph_metric_closure.cpp  steinergraph_mst.cpp  steinergraph_one_tree_bound.cpp  steinergraph_read_inn_routine.cpp  steinergraph_reading_routine.cpp  steinergraph_steiner_tree_mst_approximation.cpp  steinergraph_tsp_bound.cpp
